--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,21 @@
 <resources>
-    <string name="app_name">Project_MyFit</string>
-    <string name="done">DONE</string>
-    <string name="main">MAIN</string>
-    <string name="favorite">FAVORITE</string>
-    <string name="setting">SETTING</string>
+    <string name="app_name">MyFit</string>
+    <string name="main">Main</string>
+    <string name="favorite">Favorite</string>
+    <string name="setting">Setting</string>
     <string name="http">http//:</string>
     <string name="memo">memo</string>
-    <string name="save">SAVE</string>
-    <string name="sort">SORT</string>
-    <string name="add">ADD</string>
-    <string name="brand">브랜드</string>
-    <string name="name">제품명</string>
-    <string name="size">사이즈</string>
-    <string name="length">총장</string>
-    <string name="shoulder">어깨</string>
-    <string name="chest">가슴</string>
-    <string name="sleeve">소매</string>
+    <string name="save">Save</string>
+    <string name="add">Add</string>
+    <string name="brand">Brand</string>
+    <string name="name">Name</string>
+    <string name="size">Size</string>
+    <string name="length">Length</string>
+    <string name="shoulder">Shoulder</string>
+    <string name="chest">Chest</string>
+    <string name="sleeve">Sleeve</string>
     <string name="category">Category</string>
     <string name="add_folder">Add Folder</string>
     <string name="myFit">MyFit</string>
+    <string name="add_content">Add Content</string>
 </resources>
