--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="add_folder">Add Folder</string>
     <string name="myFit">MyFit</string>
     <string name="add_content">Add Content</string>
+    <string name="folder_name">Folder Name</string>
 </resources>
