--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="myFit">MyFit</string>
     <string name="add_content">Add Content</string>
     <string name="folder_name">Folder Name</string>
+    <string name="fab">FAB</string>
 </resources>
