--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="http">http//:</string>
     <string name="memo">memo</string>
     <string name="save">Save</string>
-    <string name="add">Add</string>
     <string name="brand">Brand</string>
     <string name="name">Name</string>
     <string name="size">Size</string>
@@ -14,10 +13,14 @@
     <string name="shoulder">Shoulder</string>
     <string name="chest">Chest</string>
     <string name="sleeve">Sleeve</string>
-    <string name="category">Category</string>
+    <string name="category">CATEGORY</string>
     <string name="add_folder">Add Folder</string>
-    <string name="myFit">MyFit</string>
     <string name="add_content">Add Content</string>
-    <string name="folder_name">Folder Name</string>
-    <string name="fab">FAB</string>
+    <string name="items">items</string>
+    <string name="top">TOP</string>
+    <string name="bottom">BOTTOM</string>
+    <string name="outer">OUTER</string>
+    <string name="etc">ETC</string>
+    <string name="all_list">All List</string>
+    <string name="floating_action_button">Floating Action Button</string>
 </resources>
