--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="etc">ETC</string>
     <string name="all_list">All List</string>
     <string name="floating_action_button">Floating Action Button</string>
+    <string name="folders">Folders</string>
 </resources>
