--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="option_4">Option 4</string>
     <string name="option_5">Option 5</string>
     <string name="option_6">Option 6</string>
+    <string name="go">GO</string>
+    <string name="created_time">생성일 : </string>
+    <string name="modified_time">수정일 : </string>
 </resources>
