--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,11 @@
     <string name="go">GO</string>
     <string name="created_time">생성일 : </string>
     <string name="modified_time">수정일 : </string>
+    <string name="list_view">List View</string>
+    <string name="grid_view">Grid View</string>
+    <string name="view_type">View Type</string>
+    <string name="delete_korean">삭제</string>
+    <string name="move_korean">이동</string>
+    <string name="item_selected">개 선택됨.</string>
+    <string name="delete">Delete</string>
 </resources>
