--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,6 @@
     <string name="chest">Chest</string>
     <string name="sleeve">Sleeve</string>
     <string name="category">CATEGORY</string>
-    <string name="add_folder">Add Folder</string>
     <string name="add_content">Add Content</string>
     <string name="items">items</string>
     <string name="top">TOP</string>
@@ -36,10 +35,11 @@
     <string name="go">GO</string>
     <string name="created_time">생성일 : </string>
     <string name="modified_time">수정일 : </string>
-    <string name="view_type">View Type</string>
     <string name="delete_korean">삭제</string>
     <string name="move_korean">이동</string>
     <string name="item_selected">개 선택됨.</string>
     <string name="delete">Delete</string>
     <string name="edit">수정</string>
+    <string name="view_type">보기 방식</string>
+    <string name="add_folder">폴더 추가</string>
 </resources>
