--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,9 @@
 <resources>
     <string name="app_name">MyFit</string>
     <string name="main">Main</string>
-    <string name="favorite">Favorite</string>
     <string name="setting">Setting</string>
     <string name="http">http//:</string>
     <string name="memo">memo</string>
-    <string name="save">Save</string>
     <string name="brand">Brand</string>
     <string name="name">Name</string>
     <string name="size">Size</string>
@@ -14,7 +12,6 @@
     <string name="chest">Chest</string>
     <string name="sleeve">Sleeve</string>
     <string name="category">CATEGORY</string>
-    <string name="add_content">Add Content</string>
     <string name="items">items</string>
     <string name="top">TOP</string>
     <string name="bottom">BOTTOM</string>
@@ -35,11 +32,14 @@
     <string name="go">GO</string>
     <string name="created_time">생성일 : </string>
     <string name="modified_time">수정일 : </string>
-    <string name="delete_korean">삭제</string>
-    <string name="move_korean">이동</string>
+    <string name="delete">삭제</string>
+    <string name="move">이동</string>
     <string name="item_selected">개 선택됨.</string>
-    <string name="delete">Delete</string>
     <string name="edit">수정</string>
     <string name="view_type">보기 방식</string>
-    <string name="add_folder">폴더 추가</string>
+    <string name="add_folder">폴더 생성</string>
+    <string name="current_position">(현재 위치)</string>
+    <string name="sort">정렬 순서</string>
+    <string name="favorite">즐겨찾기</string>
+    <string name="menu">메뉴</string>
 </resources>
