--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,19 @@
     <string name="sort">정렬 순서</string>
     <string name="favorite">즐겨찾기</string>
     <string name="menu">메뉴</string>
+    <string name="cancel">취소</string>
+    <string name="confirm">확인</string>
+    <string name="folder_name">Folder Name</string>
+    <string name="folder_name_korean">폴더 이름</string>
+    <string name="folder_name_helper">폴더 이름은 최대 3줄까지 표현 가능합니다.</string>
+    <string name="delete_check">휴지통으로 이동하시겠습니까?</string>
+    <string name="edit_folder_name">폴더 이름 변경</string>
+    <string name="go_back_check">저장되지 않았습니다.\n종료하시겠습니까?</string>
+    <string name="image_delete_check">이미지를 삭제하시겠습니까?</string>
+    <string name="item_move_check">개의 아이템을 이동하시겠습니까?</string>
+    <string name="selected_item_delete_check">개의 아이템을 휴지통으로 이동하시겠습니까?</string>
+    <string name="sort_custom">사용자 정의</string>
+    <string name="sort_latest">최근 생성 순</string>
+    <string name="sort_latest_reverse">최근 생성 역순</string>
+    <string name="tree_view_dialog_title">이동할 위치를 선택하세요.</string>
 </resources>
