인풋 아웃풋 프래그먼트 정리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="sort_latest">최근 생성 순</string>
     <string name="sort_latest_reverse">최근 생성 역순</string>
     <string name="tree_view_dialog_title">이동할 위치를 선택하세요.</string>
+    <string name="necessary_field_brand">브랜드는 필수 입력 항목입니다.</string>
+    <string name="necessary_field_name">이름은 필수 입력 항목입니다.</string>
 </resources>
