트리뷰 카테고리 추가 기능 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="tree_view_dialog_title">이동할 위치를 선택하세요.</string>
     <string name="necessary_field_brand">브랜드는 필수 입력 항목입니다.</string>
     <string name="necessary_field_name">이름은 필수 입력 항목입니다.</string>
+    <string name="add_category">카테고리 추가</string>
 </resources>
