--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="necessary_field_brand">브랜드는 필수 입력 항목입니다.</string>
     <string name="necessary_field_name">이름은 필수 입력 항목입니다.</string>
     <string name="add_category">카테고리 추가</string>
+    <string name="no_data">No Data</string>
 </resources>
