--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="chest">Chest</string>
     <string name="sleeve">Sleeve</string>
     <string name="category">CATEGORY</string>
-    <string name="items">items</string>
+    <string name="items">item</string>
     <string name="top">TOP</string>
     <string name="bottom">BOTTOM</string>
     <string name="outer">OUTER</string>
@@ -59,7 +59,9 @@
     <string name="tree_view_dialog_title">이동할 위치를 선택하세요.</string>
     <string name="necessary_field_brand">브랜드는 필수 입력 항목입니다.</string>
     <string name="necessary_field_name">이름은 필수 입력 항목입니다.</string>
-    <string name="add_category">카테고리 추가</string>
     <string name="no_data">No Data</string>
     <string name="recycle_bin">휴지통</string>
+    <string name="category_name">Category Name</string>
+    <string name="category_name_korean">카테고리 이름</string>
+    <string name="add_category">카테고리 추가</string>
 </resources>
