--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,9 +53,6 @@
     <string name="image_delete_check">이미지를 삭제하시겠습니까?</string>
     <string name="item_move_check">개의 아이템을 이동하시겠습니까?</string>
     <string name="selected_item_delete_check">개의 아이템을 휴지통으로 이동하시겠습니까?</string>
-    <string name="sort_custom">사용자 정의</string>
-    <string name="sort_latest">최근 생성 순</string>
-    <string name="sort_latest_reverse">최근 생성 역순</string>
     <string name="tree_view_dialog_title">이동할 위치를 선택하세요.</string>
     <string name="necessary_field_brand">브랜드는 필수 입력 항목입니다.</string>
     <string name="necessary_field_name">이름은 필수 입력 항목입니다.</string>
@@ -64,4 +61,12 @@
     <string name="category_name">Category Name</string>
     <string name="category_name_korean">카테고리 이름</string>
     <string name="add_category">카테고리 추가</string>
+    <string name="sort_custom">사용자 정의</string>
+    <string name="sort_create">최근 생성 순</string>
+    <string name="sort_create_reverse">최근 생성 역순</string>
+    <string name="sort_brand">브랜드 순</string>
+    <string name="sort_brand_reverse">브랜드 역순</string>
+    <string name="sort_name">이름 순</string>
+    <string name="sort_name_reverse">이름 역순</string>
+    <string name="edit_category_name">카테고리 이름 변경</string>
 </resources>
