--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,8 @@
     <string name="sort_name">이름 순</string>
     <string name="sort_name_reverse">이름 역순</string>
     <string name="edit_category_name">카테고리 이름 변경</string>
+    <string name="search">검색</string>
+    <string name="recent_search">최근 검색</string>
+    <string name="recent_search_all_delete">전체 삭제</string>
+    <string name="no_recent_search_list">최근 검색 목록이 없습니다.</string>
 </resources>
