--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="tree_view_category">CATEGORY :</string>
     <string name="http">http://</string>
     <string name="edit_name">이름 변경</string>
+    <string name="no_result">검색 결과가 없습니다.</string>
 </resources>
