모든 목록 -> 데일리룩

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="bottom">BOTTOM</string>
     <string name="outer">OUTER</string>
     <string name="etc">ETC</string>
-    <string name="all_list">모든 목록</string>
+    <string name="daily_look">데일리룩</string>
     <string name="floating_action_button">Floating Action Button</string>
     <string name="waist">Waist</string>
     <string name="thigh">Thigh</string>
