--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="current_position">(현재 위치)</string>
     <string name="sort">정렬 순서</string>
     <string name="favorite">즐겨찾기</string>
+    <string name="unTitle">미정</string>
     <string name="menu">메뉴</string>
     <string name="cancel">취소</string>
     <string name="confirm">확인</string>
