--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,6 @@
     <string name="delete_check">휴지통으로 이동하시겠습니까?</string>
     <string name="go_back_check">저장되지 않았습니다.\n종료하시겠습니까?</string>
     <string name="image_delete_check">이미지를 삭제하시겠습니까?</string>
+    <string name="recent_search_all_clear">최근 검색 목록을 모두 삭제하시겠습니까?</string>
+    <string name="all_clear">전체삭제</string>
 </resources>
