--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="image_delete_check">이미지를 삭제하시겠습니까?</string>
     <string name="recent_search_all_clear">최근 검색 목록을 모두 삭제하시겠습니까?</string>
     <string name="all_clear">전체삭제</string>
+    <string name="recycler_bin">RECYCLER BIN</string>
 </resources>
