--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,5 @@
     <string name="recent_search_all_clear">최근 검색 목록을 모두 삭제하시겠습니까?</string>
     <string name="all_clear">전체삭제</string>
     <string name="recycler_bin">RECYCLER BIN</string>
+ㅈ    <string name="delete_all">전체 삭제</string>
 </resources>
