네이밍 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,92 +1,104 @@
 <resources>
     <string name="app_name">MyFit</string>
-    <string name="main">메인 메뉴</string>
-    <string name="setting">설정</string>
-    <string name="https">https://</string>
-    <string name="memo">memo</string>
-    <string name="brand">Brand</string>
-    <string name="name">Name</string>
-    <string name="size">Size</string>
-    <string name="length">Length</string>
-    <string name="shoulder">Shoulder</string>
-    <string name="chest">Chest</string>
-    <string name="sleeve">Sleeve</string>
-    <string name="category_cap">CATEGORY</string>
-    <string name="items">item</string>
-    <string name="top">TOP</string>
-    <string name="bottom">BOTTOM</string>
-    <string name="outer">OUTER</string>
-    <string name="etc">ETC</string>
-    <string name="daily_look">데일리룩</string>
-    <string name="floating_action_button">Floating Action Button</string>
-    <string name="waist">Waist</string>
-    <string name="thigh">Thigh</string>
-    <string name="rise">Rise</string>
-    <string name="hem">Hem</string>
-    <string name="option_1">Option 1</string>
-    <string name="option_2">Option 2</string>
-    <string name="option_3">Option 3</string>
-    <string name="option_4">Option 4</string>
-    <string name="option_5">Option 5</string>
-    <string name="option_6">Option 6</string>
-    <string name="go">GO</string>
-    <string name="created_time">생성일 : </string>
-    <string name="modified_time">수정일 : </string>
-    <string name="delete">삭제</string>
-    <string name="move">이동</string>
-    <string name="item_selected">개 선택됨.</string>
-    <string name="edit">수정</string>
-    <string name="view_type">보기 방식</string>
-    <string name="add_folder">폴더 생성</string>
-    <string name="current_position">(현재 위치)</string>
-    <string name="sort">정렬 순서</string>
-    <string name="favorite">즐겨찾기</string>
-    <string name="unTitle">미정</string>
-    <string name="menu">메뉴</string>
-    <string name="cancel">취소</string>
-    <string name="confirm">확인</string>
-    <string name="folder_name">Folder Name</string>
-    <string name="folder_name_korean">폴더 이름</string>
-    <string name="edit_folder_name">폴더 이름 변경</string>
-    <string name="item_move_check">개의 아이템을 이동하시겠습니까?</string>
-    <string name="selected_item_delete_check">개의 아이템을 휴지통으로 이동하시겠습니까?</string>
-    <string name="tree_view_dialog_title">이동할 위치를 선택하세요.</string>
-    <string name="necessary_field_brand">브랜드는 필수 입력 항목입니다.</string>
-    <string name="necessary_field_name">이름은 필수 입력 항목입니다.</string>
-    <string name="no_data">No Data</string>
-    <string name="recycle_bin">휴지통</string>
-    <string name="category_name">Category Name</string>
-    <string name="category_name_korean">카테고리 이름</string>
-    <string name="add_category">카테고리 추가</string>
-    <string name="sort_custom">사용자 정의</string>
-    <string name="sort_create">최근 생성 순</string>
-    <string name="sort_create_reverse">최근 생성 역순</string>
-    <string name="sort_brand">브랜드 순</string>
-    <string name="sort_brand_reverse">브랜드 역순</string>
-    <string name="sort_name">이름 순</string>
-    <string name="sort_name_reverse">이름 역순</string>
-    <string name="edit_category_name">카테고리 이름 변경</string>
-    <string name="search">검색</string>
-    <string name="recent_search">최근 검색</string>
-    <string name="no_recent_search_list">최근 검색 목록이 없습니다.</string>
-    <string name="tree_view_category">CATEGORY :</string>
-    <string name="http">http://</string>
-    <string name="edit_name">이름 변경</string>
-    <string name="no_result">검색 결과가 없습니다.</string>
-    <string name="max_length">30자까지 입력 가능합니다.</string>
-    <string name="same_category_name_add">같은 이름의 카테고리가 존재합니다.\n그래도 추가하시겠습니까?</string>
-    <string name="same_folder_name_add">같은 이름의 폴더가 존재합니다.\n그래도 추가하시겠습니까?</string>
-    <string name="same_category_name_edit">같은 이름의 카테고리가 존재합니다.\n그래도 변경하시겠습니까?</string>
-    <string name="same_folder_name_edit">같은 이름의 폴더가 존재합니다.\n그래도 변경하시겠습니까?</string>
-    <string name="delete_check">휴지통으로 이동하시겠습니까?</string>
-    <string name="go_back_check">저장되지 않았습니다.\n종료하시겠습니까?</string>
-    <string name="image_delete_check">이미지를 삭제하시겠습니까?</string>
-    <string name="recent_search_all_clear">최근 검색 목록을 모두 삭제하시겠습니까?</string>
-    <string name="recycler_bin">RECYCLER BIN</string>
-    <string name="delete_all">전체 삭제</string>
-    <string name="folder_cap">FOLDER</string>
-    <string name="size_cap">SIZE</string>
-    <string name="daily_look_cap">DAILY LOOK</string>
-    <string name="wish_list_cap">WISH LIST</string>
-    <string name="recycle_bin_category">CATEGORY :</string>
+
+    <string name="main_bottom_nav_menu_main">메인 메뉴</string>
+    <string name="main_bottom_nav_menu_daily_look">데일리룩</string>
+    <string name="main_bottom_nav_menu_setting">설정</string>
+    <string name="main_bottom_nav_menu_wish_list">위시 리스트</string>
+    <string name="size_created_time">생성일 : </string>
+    <string name="size_modified_time">수정일 : </string>
+    <string name="size_brand">Brand</string>
+    <string name="size_name">Name</string>
+    <string name="size_size">Size</string>
+    <string name="size_https">https://</string>
+    <string name="size_go">GO</string>
+    <string name="size_memo">memo</string>
+    <string name="size_brand_necessary_field">브랜드는 필수 입력 항목입니다.</string>
+    <string name="size_name_necessary_field">이름은 필수 입력 항목입니다.</string>
+    <string name="include_length">Length</string>
+    <string name="include_shoulder">Shoulder</string>
+    <string name="include_chest">Chest</string>
+    <string name="include_sleeve">Sleeve</string>
+    <string name="include_waist">Waist</string>
+    <string name="include_thigh">Thigh</string>
+    <string name="include_rise">Rise</string>
+    <string name="include_hem">Hem</string>
+    <string name="include_option_1">Option 1</string>
+    <string name="include_option_2">Option 2</string>
+    <string name="include_option_3">Option 3</string>
+    <string name="include_option_4">Option 4</string>
+    <string name="include_option_5">Option 5</string>
+    <string name="include_option_6">Option 6</string>
+    <string name="search_recent_search">최근 검색</string>
+    <string name="search_no_result">검색 결과가 없습니다.</string>
+    <string name="recent_search_no_result">최근 검색 목록이 없습니다.</string>
+    <string name="recent_search_delete_all">전체 삭제</string>
+
+    <string name="all_category_cap">CATEGORY</string>
+    <string name="all_folder_cap">FOLDER</string>
+    <string name="all_size_cap">SIZE</string>
+    <string name="all_daily_look_cap">DAILY LOOK</string>
+    <string name="all_wish_list_cap">WISH LIST</string>
+    <string name="all_recycler_bin_cap">RECYCLER BIN</string>
+
+    <string name="all_top_cap">TOP</string>
+    <string name="all_bottom_cap">BOTTOM</string>
+    <string name="all_outer_cap">OUTER</string>
+    <string name="all_etc_cap">ETC</string>
+
+    <string name="all_add_category">카테고리 추가</string>
+    <string name="all_create_folder">폴더 생성</string>
+    <string name="all_sort">정렬 순서</string>
+
+    <string name="all_no_data">No Data</string>
+
+    <string name="item_folder_items">items</string>
+    <string name="item_folder_item">item</string>
+
+    <string name="menu_search">검색</string>
+    <string name="menu_edit">수정</string>
+    <string name="menu_delete">삭제</string>
+    <string name="menu_move">이동</string>
+    <string name="menu_favorite">즐겨찾기</string>
+    <string name="menu_menu">메뉴</string>
+    <string name="menu_recycle_bin">휴지통</string>
+
+    <string name="list_menu_view_type">보기 방식</string>
+
+    <string name="action_mode_title">개 선택됨.</string>
+
+    <string name="tree_title">이동할 위치를 선택하세요.</string>
+    <string name="tree_view_current_position">(현재 위치)</string>
+    <string name="tree_category">CATEGORY :</string>
+
+    <string name="dialog_confirm">확인</string>
+    <string name="dialog_cancel">취소</string>
+
+    <string name="dialog_hint_category_name">Category Name</string>
+    <string name="dialog_place_holder_category_name">카테고리 이름</string>
+    <string name="dialog_title_edit_category_name">카테고리 이름 변경</string>
+
+    <string name="dialog_hint_folder_name">Folder Name</string>
+    <string name="dialog_place_holder_folder_name">폴더 이름</string>
+    <string name="dialog_title_edit_folder_name">폴더 이름 변경</string>
+
+    <string name="dialog_sort_custom">사용자 정의</string>
+    <string name="dialog_sort_create">최근 생성 순</string>
+    <string name="dialog_sort_create_reverse">최근 생성 역순</string>
+    <string name="dialog_sort_brand">브랜드 순</string>
+    <string name="dialog_sort_brand_reverse">브랜드 역순</string>
+    <string name="dialog_sort_name">이름 순</string>
+    <string name="dialog_sort_name_reverse">이름 역순</string>
+
+    <string name="dialog_message_item_move">개의 아이템을 이동하시겠습니까?</string>
+    <string name="dialog_message_selected_item_delete">개의 아이템을 휴지통으로 이동하시겠습니까?</string>
+    <string name="dialog_edit_text_max_length">30자까지 입력 가능합니다.</string>
+    <string name="dialog_message_same_category_name_add">같은 이름의 카테고리가 존재합니다.\n그래도 추가하시겠습니까?</string>
+    <string name="dialog_message_same_folder_name_add">같은 이름의 폴더가 존재합니다.\n그래도 추가하시겠습니까?</string>
+    <string name="dialog_message_same_category_name_edit">같은 이름의 카테고리가 존재합니다.\n그래도 변경하시겠습니까?</string>
+    <string name="dialog_message_same_folder_name_edit">같은 이름의 폴더가 존재합니다.\n그래도 변경하시겠습니까?</string>
+    <string name="dialog_message_delete">휴지통으로 이동하시겠습니까?</string>
+    <string name="dialog_message_go_back">저장되지 않았습니다.\n종료하시겠습니까?</string>
+    <string name="dialog_message_image_clear">이미지를 삭제하시겠습니까?</string>
+    <string name="dialog_message_recent_search_all_delete">최근 검색 목록을 모두 삭제하시겠습니까?</string>
 </resources>
