--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,6 +102,6 @@
     <string name="dialog_message_go_back">저장되지 않았습니다.\n종료하시겠습니까?</string>
     <string name="dialog_message_image_clear">이미지를 삭제하시겠습니까?</string>
     <string name="dialog_message_recent_search_delete_all">최근 검색 목록을 모두 삭제하시겠습니까?</string>
-    <string name="dialog_message_restore">개의 아이템을 복원하시겠습니까?</string>
+    <string name="dialog_message_restore">개의 아이템을 복구하시겠습니까?</string>
     <string name="dialog_message_delete_forever">개의 아이템을 완전 삭제하시겠습니까?\n삭제 후 복구할 수 없습니다.</string>
 </resources>
