--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,5 +104,6 @@
     <string name="dialog_message_recent_search_delete_all">최근 검색 목록을 모두 삭제하시겠습니까?</string>
     <string name="dialog_message_restore">개의 아이템을 복구하시겠습니까?</string>
     <string name="dialog_message_delete_forever">개의 아이템을 완전 삭제하시겠습니까?\n삭제 후 복구할 수 없습니다.</string>
-    <string name="dialog_message_no_parent">\n\n위 아이템의 상위 디렉토리가 존재하지 않습니다.\n확인을 누르시면 '복구됨' 카테고리에 복구됩니다.</string>
+    <string name="dialog_message_no_parent">\n\n위 아이템의 상위 디렉토리가 존재하지 않습니다.\n확인을 누르시면 \'복구됨\' 카테고리에 복구됩니다.</string>
+    <string name="restore_category_name">복구됨</string>
 </resources>
