--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,5 +118,59 @@
     <string name="sign_in_with_facebook">Sign in with Facebook</string>
     <string name="sign_in_find_password">비밀번호 찾기</string>
     <string name="sign_in_find_email">이메일 찾기</string>
-    <string name="sign_in_sign_up">처음이라면? <u>회원가입</u></string>
+    <string name="sign_in_sign_up"><u>다른 이메일로 회원가입</u></string>
+    <string name="sign_in_email_is_empty">이메일을 입력해주세요.</string>
+    <string name="sign_in_password_is_empty">비밀번호를 입력해주세요.</string>
+    <string name="sgin_in_password_not_equal">비밀번호가 일치하지 않아요.</string>
+    <string name="sing_up_username_is_empty">이름을 입력해주세요.</string>
+    <string name="sgin_up_email_is_badly_formatted">이메일이 유효하지 않아요.</string>
+    <string name="sign_up_password_is_less_than_6">최소 6자 이상이어야 해요.</string>
+    <string name="sign_up_email_is_used">이미 사용중인 이메일이에요.</string>
+    <string name="sign_up_fail">알 수 없는 이유로 가입에 실패했어요.</string>
+    <string name="sign_up_username">Username</string>
+    <string name="sign_up_confirm_password">Confirm Password</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="sign_up_canceled">가입이 취소됐어요.</string>
+    <string name="sign_up_success">가입에 성공했어요.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="verification_send_email">가입하신 이메일로 인증 메일을 보냈어요.</string>
+    <string name="verification_please_verify">이메일을 인증해 주세요.</string>
+    <string name="verification_verify">인증하기</string>
+    <string name="sign_in_please_verify">이메일이 인증되지 않았어요. 이메일을 확인해주세요.</string>
+    <string name="sign_up_find_password"><u>비밀번호를 잊어버리셨나요?</u></string>
+    <string name="reset_password_cancled">취소되었어요.</string>
+    <string name="reset_password_not_exsist_email">가입된 이메일이 존재하지 않아요.</string>
+    <string name="send_reset_password_email_lets_check">확인하기</string>
+    <string name="send_reset_password_email_please_check_email">입력하신 이메일로\n비밀번호 재설정 메일이 전송되었어요.\n메일함을 확인해 주세요.</string>
+    <string name="reset_password_next">다음</string>
+    <string name="reset_password">비밀번호 재설정</string>
+    <string name="sign_in_anonymously"><u>비회원으로 시작하기</u></string>
+    <string name="sign_in_slash">/</string>
+    <string name="re_verification_resend">재전송</string>
+    <string name="re_verification_please_check_email">이메일 인증이 확인되지 않았어요.\n메일함을 확인해 주세요.\n메일이 보이지 않는다면\n휴지통 혹은 스팸메일함을 확인해 주세요.</string>
+    <string name="sign_in_check_email_or_password">비밀번호 혹은 이메일이 올바르지 않아요.</string>
+    <string name="sign_in_not_exist_email">가입된 이메일이 존재하지 않아요.</string>
+    <string name="facebook_app_id">331124008510777</string>
+    <string name="fb_login_protocol_scheme">fb331124008510777</string>
+
+    <string name="toast_fail_unknown_error">알 수 없는 이유로 실패하였어요.</string>
+    <string name="toast_re_send_verification_mail">메일이 재전송 되었어요.</string>
+    <string name="toast_check_network">네트워크 연결상태가 확인되지 않아요. 연결상태를 확인해 주세요.</string>
+    <string name="toast_google_sign_in_fail">구글 로그인에 실패했어요.</string>
+    <string name="toast_naver_sign_in_fail">네이버 로그인에 실패했어요.</string>
+    <string name="toast_sign_in_success">로그인 되었어요.</string>
+    <string name="toast_naver_sign_in_success">네이버 아이디로 로그인 되었어요.</string>
+    <string name="toast_kakao_sign_in_success">카카오 아이디로 로그인 되었어요.</string>
+    <string name="toast_sign_in_anonymously_success">비회원으로 로그인 되었어요.</string>
+    <string name="toast_sign_in_anonymously_fail_">비회원 로그인에 실패하였어요.</string>
+    <string name="toast_google_sign_in_success">구글 이메일로 로그인 되었어요.</string>
+    <string name="toast_kakao_sign_in_fail">카카오 로그인에 실패했어요.</string>
+    <string name="toast_kakao_sing_in_fail_permissioon">카카오 정보 권한이 없어 연동에 실패하였어요.</string>
+
+    <string name="naver_client_id">R7D_EUivu6CPSTLpzzkp</string>
+    <string name="naver_client_secret">0sBCSITgqA</string>
+    <string name="naver_profile_api_url">https://openapi.naver.com/v1/nid/me</string>
+    <string name="firebase_dynamic_link">https://closetnote.page.link/verify</string>
+    <string name="kakao_native_key">2d3aadea523ac7b61f93b71a94f20b20</string>
 </resources>
